# meta-AIHack

./: .dockerignore  .gitignore  .openenvignore  KNOWLEDGE.md  MENTAL_MODEL.md  PLAN.md  PROJECT_STATUS.md  README.md  ROADMAP.md  gaps.md  inference.py  models.py  openenv.yaml  policy_learning.py  pyproject.toml  required.md
.github/workflows/: docker-smoke-test.yml
analysis/: comp.md  comp_know.md  competition_notes.md  deep_competitive_gap_report.md  grounding_audit.md  inference.md
data/: dataset.json
server/: Dockerfile  app.py  environment.py  grader.py  reward.py  tasks.py
tests/: openenv_test_stubs.py  test_api_integration.py  test_competitive_upgrade.py  test_environment_smoke.py  test_extra_fields_penalty.py  test_grader_unit.py  test_inference_unit.py  test_policy_learning.py  test_tasks_unit.py
